--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.2",
     "memoize-one": "^6.0.0",
-    "normalize-wheel-es": "^1.2.0"
+    "normalize-wheel-es": "^1.2.0",
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -82,6 +83,7 @@
     "@types/jsdom": "^16.2.14",
     "@types/node": "*",
     "@types/sass": "^1.43.1",
+    "@types/sortablejs": "^1.15.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitest/ui": "0.16.0",
